--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
 
 <!DOCTYPE html>
 <html>
-<head>
+
+          <head>
+        <meta charset="utf-8">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+        <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+<meta name="HandheldFriendly" content="true">
+      
+    </head>
 <style>
 ul {
   list-style-type: none;
@@ -188,9 +198,9 @@ li.dropdown {
 </ul>
 </header>
 <div class="w3-content w3-section" style="max-width:500px">
-  <img class="mySlides" src="/project/pics/farm2.jpg" style="width:100%">
-  <img class="mySlides" src="/project/pics/farm2.jpg" style="width:100%">
-  <img class="mySlides" src="/project/pics/farm3.jpg" style="width:100%">
+  <img class="mySlides" src="farm2.jpg" style="width:100%">
+  <img class="mySlides" src="farm2.jpg" style="width:100%">
+  <img class="mySlides" src="farm3.jpg" style="width:100%">
 </div>
 
 </body>
