--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
      <header>
 	    <div class="main">
            <div class="logo">
-             <img src="logo.jpg">
+             <img src="/logo.jpg">
 	     </div class="items">
            <ul>
             <li><a href="#">Home</a> </li>
@@ -110,7 +110,7 @@
 	          <li><a href="#media">Contact us</a> </li>
             <li><a href="#">News</a> </li>
             <li><a href="wether.html">weather</a> </li>
-	          <li><img src="cart.jpg" style="width:30px;height:30px"></a> </li>
+	          <li><img src="/cart.jpg" style="width:30px;height:30px"></a> </li>
            </ul>
 	     </div>
      </header>
