--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     
           <img src="rice.jpg"  style="width:150px; height:150px;"><p>Management</p>  
     
-             <img src="soil.jpg" style="width:150px; height:150px;"><p>Pre Harvest</p>
+             <img src="fruit.jpg" style="width:150px; height:150px;"><p>Pre Harvest</p>
              <img src="beef.jpg" alt="Mountains" style="width:150px; height:150px;"><p>Pre Harvest</p>
              <img src="fruit.jpg" alt="Mountains" style="width:150px; height:150px;"><p>Pre Harvest</p>  
   </div>
