--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
               <li><a href="#">News</a> </li>
               <li><a href="weather.html">weather</a></li>
               <li><a href="#">Login</a> </li>
-              <li><a href="signup.html">Sign up</a> </li>
+              <li><a href="signup_index.html">Sign up</a> </li>
 	          <li><img src="cart.jpg" style="width:30px;height:30px"></a> </li>
            </ul>
 	     </div>
