--- a/index.html
+++ b/index.html
@@ -117,11 +117,11 @@
      	      <li><a href="index.html">Home</a> </li>
 	          <li><a href="#">Services</a> </li>
 	          <li><a href="#about-section">About</a> </li>
-	          <li><a href="mailto:ravitejaswiniperepi232@gmail.com">Contact us</a> </li>
+	          <li><a href="#media">Contact us</a> </li>
               <li><a href="#">News</a> </li>
               <li><a href="weather.html">weather</a></li>
               <li><a href="#">Login</a> </li>
-              <li><a href="signup_index.html">Sign up</a> </li>
+              <li><a href="sign_index.html">Sign up</a> </li>
 	          <li><img src="cart.jpg" style="width:30px;height:30px"></a> </li>
            </ul>
 	     </div>
@@ -246,7 +246,7 @@
 
 <br><br>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-<div class="media">
+<div class="media" id="media">
   <h2> Contact Us</h2>
 <a href="#" class="fa fa-facebook"></a>   
 <a href="#" class="fa fa-linkedin"></a>
