--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 	          <li><a href="#about-section">About</a> </li>
 	          <li><a href="#media">Contact us</a> </li>
               <li><a href="#">News</a> </li>
-              <li><a href="weather.html">weather</a></li>
+              <li><a href="wether.html">weather</a></li>
               <li><a href="#">Login</a> </li>
               <li><a href="sign_index.html">Sign up</a> </li>
 	          <li><img src="cart.jpg" style="width:30px;height:30px"></a> </li>
