--- a/index.html
+++ b/index.html
@@ -158,19 +158,19 @@
 
    <div class="menu1">
    	 <a href="pigfarm.html">
-     <img class="menup" border="0" alt="W3Schools" src="pigfarm.jpg" width="250" height="250"></a>
+     <img class="menup" border="0" alt="W3Schools" src="pigfarm.jpg" width="150" height="150"></a>
      <a href="fruit.html">
-     <img class="menup" border="0" alt="W3Schools" src="fruit.jpg" width="250" height="250"> </a>
+     <img class="menup" border="0" alt="W3Schools" src="fruit.jpg" width="150" height="150"> </a>
      <a href="poultry.html">
-     <img class="menup" border="0" alt="W3Schools" src="chicken.jpg" width="250" height="250"></a>
+     <img class="menup" border="0" alt="W3Schools" src="chicken.jpg" width="150" height=150"></a>
    </div>
    <div class=menu2>
    	 <a href="rice.html">
-     <img class="menup"border="0" alt="W3Schools" src="rice.jpg" width="250" height="250"> </a>
+     <img class="menup"border="0" alt="W3Schools" src="rice.jpg" width="150" height="150"> </a>
      <a href="soil.html">
-     <img class="menup" border="0" alt="W3Schools" src="soil.jpg" width="250" height="250"> </a>
+     <img class="menup" border="0" alt="W3Schools" src="soil.jpg" width="150" height="150"> </a>
      <a href="beef.html">
-     <img class="menup" border="0" alt="W3Schools" src="beef.jpg" width="250" height="250"> </a>
+     <img class="menup" border="0" alt="W3Schools" src="beef.jpg" width="150" height="150"> </a>
    </div>
 
 
